--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,17 @@
   height: auto;
   padding: 0px;
 }
+
+#bottom-layer{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: auto;
+  height: auto;
+  padding: 0px;
+  width:300px;
+  background-color: white;
+
+
+
+}
