--- a/src/components/messageForm.css
+++ b/src/components/messageForm.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Karantina&display=swap');
 
-#text-box{
+#text-box {
   display:flex;
   align-items: center;
   flex-direction:column;
@@ -9,12 +9,13 @@
   width: 500px;
   height: 100px ;
   justify-content: center;
-  border-radius: 50px;
+  border-radius: 10px;
   margin-top: 20px;
   font-size: 15px;
+  border:none;
 }
 
-#button{
+#button {
   width: 100px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
