moved components and adjusted heights and fonts

--- a/src/components/messageForm.css
+++ b/src/components/messageForm.css
@@ -11,8 +11,9 @@
   justify-content: center;
   border-radius: 10px;
   margin-top: 20px;
-  font-size: 15px;
-  border:none;
+  font-size: 25px;
+  border-color: black;
+ 
 }
 
 #button {
