--- a/src/components/messageItem.css
+++ b/src/components/messageItem.css
@@ -8,7 +8,6 @@
   flex-direction:column;
   text-align:left;
   justify-content: center;
-  width: 250px;
 }
 
 ul{
@@ -18,11 +17,14 @@ ul{
 
 li{
   height:30px;
-  font-family: 'Special Elite', cursive;
+  font-family:arial;
+  font-size:30px;
   background-color: white;
   padding:10px;
   border-radius: 20px;
   text-align: center;
   margin-top: 10px;
+  border-top:50px;
+  border-bottom:30px;
 }
 
